--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import "@economist/component-icon";
+
 .Masthead {
   background: var(--Masthead--background-color, #333);
   color: var(--Masthead--color, #fff);
